
2003-12-08	Joel Becker <joel.becker@oracle.com>

	* documents/asm-install.txt: Newer oracleasm plans.
	* tools/asmtool.c: Started towards true ASM disks.
	* tools/list.h: list_head for asmtool.
	* vendors/common/oracleasm.init.functions: some tweaks.

2003-12-07	Joel Becker <joel.becker@oracle.com>

	* vendor/common/oracleasm.init.functions: Call new asmtool.

2003-12-07	Joel Becker <joel.becker@oracle.com>

	* configure.in: Bump to 0.10.0 for reworking disk labels.
	* tools/asmtool.c: Totally new asmtool code.
	* kernel/oracleasm.c: Handle new disk label structure.
	* include/linux/asmdisk.c: New disk label structure.

2003-12-04	Joel Becker <joel.becker@oracle.com>

	* vendor/{redhat,unitedlinux}/*.spec.in: %{support_ver}

2003-12-03	Joel Becker <joel.becker@oracle.com>

	* vendor/common/oracleasm.init.functions: Add scan_disks().
	* vendor/{redhat,unitedlinux}/oracleasm.init.in: Add scandisks
		support.
	* vendor/common/oracleasm.sysconfig: Add boot scan variables.

2003-12-03	Joel Becker <joel.becker@oracle.com>

	* vendor/{redhat,unitedlinux}/oracleasm.init.in: Fix no-module
		exit.

2003-12-03	Joel Becker <joel.becker@oracle.com>

	* vendor/common/oracleasm.init.functions: Added disk marking.
	* vendor/{redhat,unitedlinux}/oracleasm.init.in: Add disk
		marking.

2003-11-20	Joel Becker <joel.becker@oracle.com>

	* configure.in: 0.9.1

2003-11-20	Joel Becker <joel.becker@oracle.com>

	* vendor/unitedlinux/oracleasm-2.4.21-111.spec.in: Added
		non-x86_64 targets.
	* vendor/unitedlinux/oracleasm-2.4.21-{107,138}.spec.in: Added.
	* vendor/unitedlinux/Makefile: Added the new specfiles.
	* configure.in: Added the new specfiles.
	* vendor/unitedlinux/oracleasm.init.in: Handle SP3 kernel
		unames.

2003-11-20	Joel Becker <joel.becker@oracle.com>

	* Makefile: deflt, not dflt.
	* vendor/unitedlinux/oracleasm-2.4.19-4GB-304.spec.in: deflt,
		not dflt.

2003-11-19	Joel Becker <joel.becker@oracle.com>

	* Makefile: Add UL10SP3 magic target.